<resources>
    <!-- Universal-->
    <string name="app_name">Softcafe Engineer</string>
    <string name="welcome_back">Welcome Back!</string>

    <!-- WelcomeScreen -->
    <string name="welcome">Welcome 👋</string>
    <string name="order">Order 🗒️</string>
    <string name="manager_log_in">Manager Log-In 👨‍💼</string>
    <string name="employee_log_in">Barista Log-In 👨‍🍳</string>
    <string name="not_registered">Not registered? 🤨</string>
    <string name="sign_up_here">Sign-up here 🤭</string>

    <!-- ScanTable -->
    <string name="enter_table_id">* Enter table unique id:</string>
    <string name="submit">Submit</string>

    <!-- Status Popup -->
    <string name="your_order_status">Your order\'s\ncurrent status is:</string>
    <string name="cancelled_order">Your order was\ncancelled 😔</string>
    <string name="place_new_question">Would you like to place\na new order ❓</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- ViewMenu -->
    <string name="view_cart">🛒</string>

    <!-- ViewCategories -->
    <string name="add_to_cart">Add to cart</string>

    <!-- Add To Cart Popups -->
    <string name="choose_quantity">Choose quantity:</string>
    <string name="comments">Comments</string>

    <!-- ViewCart -->
    <string name="submit_order">Submit order</string>

    <!-- Manager & Barista LogIn/SignUp -->
    <string name="please_enter_info_msg">Please enter the information provided by your management🤫</string>
    <string name="enter_username">* Enter username:</string>
    <string name="enter_password">* Enter password:</string>
    <string name="log_in">Log In</string>
    <string name="continue_btn">Continue</string>
    <string name="password_info">Use at least 8 characters.\nValid characters include:\n\u2022 Upper and lower case latin characters\n\u2022 Numbers\n\u2022 Symbols [ !@#$%^*(),.\/; ]</string>

    <!-- Manager Actions -->
    <string name="edit_Cinfo">Edit cafeteria\'s info ☕</string>
    <string name="manage_employees">Manage employees 🕺</string>
    <string name="manage_tables">Manage tables 🪑</string>
    <string name="edit_menu">Edit menu 🍽</string>
    <string name="show_revenue">Revenue breakdown 🤑</string>

    <!-- Alert -->
    <string name="ok">OK</string>

    <!-- Info Input -->
    <string name="enter_info">Please enter your information 🙏</string>
    <string name="enter_address">* Enter address</string>
    <string name="enter_phone_number">* Enter phone number</string>
    <string name="enter_TIN">* Enter TIN</string>
    <string name="enter_brand">* Enter brand name</string>
    <string name="finish">Finish</string>

    <!-- Edit cafeteria info -->
    <string name="edit_address">* Address</string>
    <string name="edit_phone_number">* Phone number</string>
    <string name="edit_TIN">* Tax Identification Number</string>
    <string name="edit_brand">* Brand name</string>
    <string name="confirm_changes">Are you sure you want to confirm these changes❓</string>

    <!-- Manage Tables -->
    <string name="table_number_title">Table number:</string>
    <string name="table_unique_id_title">Table unique id:</string>
    <string name="na">NA</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add new</string>

    <!-- Manage Table Popups -->
    <string name="cancel">Cancel</string>
    <string name="addB">Add</string>
    <string name="confirm">Confirm</string>
    <string name="new_unique_table_id">Unique id</string>
    <string name="new_table_number">Table Number</string>
    <string name="confirm_table_delete">Are you sure you want to delete this table❓</string>

    <!-- Manage Employees -->
    <string name="employee_password">Password:</string>
    <string name="employee_username">Username:</string>

    <!-- Manage Employee Popups -->
    <string name="new_username">Username</string>
    <string name="new_password">Password</string>
    <string name="confirm_employee_delete">Are you sure you want to delete this employee❓</string>

    <!-- Edit Menu -->
    <string name="add_item">Add product</string>
    <string name="add_category">Add category</string>
    <string name="delete_category">Delete category</string>
    <string name="edit_category">Edit category</string>
    <string name="edit_product">Edit product</string>
    <string name="delete_product">Delete product</string>

    <!-- Edit Categories Popups-->
    <string name="category_desc">Description</string>
    <string name="category_product_name">Name</string>
    <string name="confirm_category_delete">Are you sure you want to delete this category❓</string>
    <string name="product_price">Price</string>
    <string name="product_availability">Availability</string>
    <string name="change_availability">Change availability</string>
    <string name="confirm_product_delete">Are you sure you want to delete this product❓</string>

    <!-- Revenue -->
    <string name="choose_year">\n🗓️ Choose year:</string>
    <string name="choose_month">\n🗓️ Choose month:</string>
    <string name="choose_day">\n🗓️ Choose day:</string>
    <string name="calculate">Calculate</string>
    <string name="monthly_total">💵 Monthly total:</string>
    <string name="daily_total">💰 Daily total:</string>
    <string name="no_records">no records</string>

    <!-- Barista Actions -->
    <string name="hello">Hello!</string>
    <string name="close_day">Close day</string>
    <string name="refresh">Refresh</string>
    <string name="total_cost">Total cost:</string>
    <string name="view">View</string>

    <!-- Manage Order -->
    <string name="order_status">Order status:</string>

    <!-- Order List -->
    <string name="quantity">Quantity:</string>
    <string name="change_order_status">Change\norder status</string>

    <!-- Change status Popup -->
    <string name="change_to">Change status to:</string>
    <string name="in_progress">IN PROGRESS</string>
    <string name="canceled">CANCELED</string>
    <string name="waiting">WAITING</string>
    <string name="completed">COMPLETED</string>

    <!-- Edit order info Popup -->
    <string name="reduce_quantity">Reduce quantity to:</string>
    <string name="or">or</string>
    <string name="remove_product">Remove product</string>

</resources>
