<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.StartScreens.WelcomeScreenActivity">

    <Button
        android:id="@+id/btn_1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/light_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/manager_log_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_1_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1_1" />

    <TextView
        android:id="@+id/txt_view_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/text"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_1_1"
        android:layout_width="134dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/dark_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/order"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_1_1"
        app:strokeColor="#D8E3E2" />

    <Button
        android:id="@+id/btn_1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/light_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/employee_log_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1_1" />

    <TextView
        android:id="@+id/txt_view_1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/not_registered"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1_2" />

    <Button
        android:id="@+id/btn_1_4"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/light_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up_here"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txt_view_1_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_1_3" />
</androidx.constraintlayout.widget.ConstraintLayout>
