<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.Manager.Actions.ManagerActionsActivity">

    <Button
        android:id="@+id/btn_manager_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/dark_button"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_edit_Cinfo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_button"
        android:text="@string/edit_Cinfo"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_manager_activity_header" />

    <Button
        android:id="@+id/btn_manage_employees"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/dark_button"
        android:text="@string/manage_employees"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_Cinfo" />

    <Button
        android:id="@+id/btn_manage_tables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/dark_button"
        android:text="@string/manage_tables"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_manage_employees" />

    <Button
        android:id="@+id/btn_edit_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/dark_button"
        android:text="@string/edit_menu"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_manage_tables" />

    <Button
        android:id="@+id/btn_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/dark_button"
        android:text="@string/show_revenue"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_menu" />

    <TextView
        android:id="@+id/txt_manager_activity_header"
        android:layout_width="287dp"
        android:layout_height="116dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
