<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.Barista.Actions.BaristaActionsActivity">

    <Button
        android:id="@+id/btn_barista_actions_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/dark_button"
        android:text="@string/refresh"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_active_orders" />

    <Button
        android:id="@+id/btn_barista_actions_close_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_button"
        android:text="@string/close_day"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_active_orders" />

    <TextView
        android:id="@+id/txt_barista_actions_header"
        android:layout_width="287dp"
        android:layout_height="116dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/hello"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_active_orders"
        android:layout_width="match_parent"
        android:layout_height="459dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_barista_actions_header" >

        <TextView
            android:id="@+id/active_order_layout_table_number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/na"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/active_order_layout_table_number_title"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>
